--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "dependencies": {
     "@fancyapps/ui": "^5.0.23",
-    "air-datepicker": "^3.3.5"
+    "air-datepicker": "^3.3.5",
+    "slick-carousel": "^1.8.1"
   }
 }
